# experiments

./: CMakeLists.txt  Dockerfile  Makefile.config.in  README.md  config.py.in  setup-vars.sh.in
bank/: Makefile  common.h  regexbank.sh  run.sh
bank-tessla/: Makefile  regexbank.sh
bank-tessla/legacy/: bankmontessla.c
dataraces/: Makefile  monitor.cpp  monitor.txt  oldmonitor.txt  run.py
plots/scripts/: wayland-plots.py
primes/: Makefile  emptymonitor.c  experiments-tessla.sh  monitor-primes.c  run-c.py  run_common.py  runprimes-dr-bad.sh  runprimes-dr.sh  shm_prepare_programs.py
scalability/: Makefile  experiments.sh  monitor-manual.c  source.c
scripts/: run-experiments.sh
wayland/: Makefile  events4.txt  experiments.sh  monitor.c  monitor.c.in  monitor.cpp  monitor.cpp.in  monitor.vl  run.sh
